--- a/styles.css
+++ b/styles.css
@@ -140,5 +140,4 @@ background-image: url("images/image-product-mobile.jpg");
 .Product_Des {
 grid-row: 2 / span 1;
 grid-column: 1 / span 1; 
-}
-}
+}}
